examples/test/testpolicy5449.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5449
  namespace: namespace105
spec:
  podSelector:
    matchLabels:
      key8: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value7
      podSelector:
        matchLabels:
          key29: value47
          key7: value16
          key42: value12
